<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMeal">

    <ListView
        android:id="@+id/listViewIngredientList"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="268dp"
        android:ems="10"
        android:hint="@string/nameInput"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/caloriesInput"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/fatInput"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCalories"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextCarbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/carbohydratesInput"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFat" />

    <EditText
        android:id="@+id/editTextProtein"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/proteinInput"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarbohydrates"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnAddIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="addIngredientOnClick"
        android:text="@string/add_ingredient"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextCarbohydrates"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCreateMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="createConfirmDialog"
        android:text="@string/create_meal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteIngredients" />

    <TextView
        android:id="@+id/textViewIngredientsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ingredients"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeleteIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="deleteIngredientOnClick"
        android:text="@string/delete"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewIngredientList" />

</android.support.constraint.ConstraintLayout>